tests/baselines/reference/assignmentCompat1.errors.txt
tests/cases/compiler/assignmentCompat1.ts(4,1): error TS2741: Property 'one' is missing in type '{ [index: string]: any; }' but required in type '{ one: number; }'.
tests/cases/compiler/assignmentCompat1.ts(6,1): error TS2741: Property 'one' is missing in type '{ [index: number]: any; }' but required in type '{ one: number; }'.
tests/cases/compiler/assignmentCompat1.ts(8,1): error TS2322: Type 'string' is not assignable to type '{ [index: string]: any; }'.
tests/cases/compiler/assignmentCompat1.ts(10,1): error TS2322: Type 'boolean' is not assignable to type '{ [index: number]: any; }'.


==== tests/cases/compiler/assignmentCompat1.ts (4 errors) ====
    var x = { one: 1 };
    var y: { [index: string]: any };
    var z: { [index: number]: any };
    x = y;  // Error
    ~
!!! error TS2741: Property 'one' is missing in type '{ [index: string]: any; }' but required in type '{ one: number; }'.
!!! related TS2728 tests/cases/compiler/assignmentCompat1.ts:1:11: 'one' is declared here.
    y = x;  // Ok because index signature type is any
    x = z;  // Error
    ~
!!! error TS2741: Property 'one' is missing in type '{ [index: number]: any; }' but required in type '{ one: number; }'.
!!! related TS2728 tests/cases/compiler/assignmentCompat1.ts:1:11: 'one' is declared here.
    z = x;  // Ok because index signature type is any
    y = "foo"; // Error
    ~
!!! error TS2322: Type 'string' is not assignable to type '{ [index: string]: any; }'.
    z = "foo"; // OK, string has numeric indexer
    z = false; // Error
    ~
!!! error TS2322: Type 'boolean' is not assignable to type '{ [index: number]: any; }'.
    
    